public_html/skins/default/style.css
/* ... */
._wModal_btns div.default:hover,
._wModal_btns div.default:focus {
  background-color: #0044CC
}


/**** Login form elements ****/

#login_form {
  margin: auto;
  margin-top: 75px;
  padding: 20px;
  width: 330px;
  background-color: #e0e0e0;
  border: 1px solid #d0d0d0;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  text-align: center;
}

#login_form span {
  display: block;
  line-height: 24px;
  width: 330px;
  text-align: left;
}

#login_form label {
  display: block;
  width: 80px;
  text-align: right;
  float: left;
  margin-right: 10px;
}

#login_form select,
#login_form input[type="text"],
#login_form input[type="password"] {
  width: 210px;
}

#login_submit {
  margin-top: 5px;
}


/**** Main screen elements ****/

#main {
  padding: 5px 30px;
}

#footer .foot {
  white-space: nowrap;
  vertical-align: top;
  text-align: right;
}

#folder-edit-form label {
  display: inline-block;
  width: 100px;
}


/***** tree indicators *****/

td span.branch span
{
  float: left;
  height: 16px;
}

td span.branch span.tree
{
  height: 17px;
  width: 15px;
  background: url(images/tree.gif) 0 0 no-repeat;
}

td span.branch span.l1
{
  background-position: 0px 0px; /* L */
}

td span.branch span.l2
{
  background-position: -30px 0px; /* | */
}

td span.branch span.l3
{
  background-position: -15px 0px; /* |- */
}

/**** File manager elements ****/

#taskcontent {
  position: absolute;
  left: 310px;
  right: 10px;
  bottom: 10px;
  top: 10px;
  background-color: #f0f0f0;
  border: 1px solid #d0d0d0;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  overflow-y: auto;
}

#actionbar {
  position: absolute;
  width: 82px;
  top: 10px;
  bottom: 10px;
  overflow: hidden;
}

#forms {
  position: absolute;
  left: 310px;
  right: 10px;
  top: 10px;
}

#forms form {
  display: none;
}

#forms fieldset {
  margin: 0;
  background-color: #f0f0f0;
}

#forms table {
  border-spacing: 0;
  margin: 0;
  padding: 0;
}

#forms table td.buttons {
  width: 1%;
  white-space: nowrap;
}

#actionbar a {
  display: block;
  width: 80px;
  height: 55px;
  border: 1px solid #d0d0d0;
  border-spacing: 0;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  background-color: #f0f0f0;
  margin-bottom: 6px;
  cursor: pointer;
  color: #333;
}

#actionbar a span {
  display: block;
  position: absolute;
  width: 100%;
  text-align: center;
  padding-top: 40px;
  font-size: 9px;
}

#folder-create-button {
  background: url(images/folder_new.png) center 6px no-repeat;
}

#file-create-button {
  background: url(images/file_new.png) center 6px no-repeat;
}

#file-upload-button {
  background: url(images/file_new.png) center 6px no-repeat;
}

#file-search-button {
  background: url(images/search.png) center 6px no-repeat;
}

#file-save-button {
  background: url(images/save.png) center 6px no-repeat;
}

#actionbar #file-save-button {
  display: none;
}

#folderlist,
#filedata {
  position: absolute;
  width: 200px;
  top: 10px;
  bottom: 10px;
  left: 98px;
  border: 1px solid #d0d0d0;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  background-color: #f0f0f0;
  padding: 2px;
}

#folderlist table,
#filelist table {
  width: 100%;
  border-spacing: 0;
}

#filelist td {
  white-space: nowrap;
  cursor: default;
  width: 70px;
  overflow: hidden;
}

#filelist td.filename {
  width: 98%;
  height: 20px;
  padding: 0 4px;
  text-overflow: ellipsis;
}

#filelist td.filesize {
  text-align: right;
}

#filelist td.filemtime {
  width: 115px;
}

#filelist tbody td.filename span {
  background: url(images/mimetypes/unknown.png) 0 0 no-repeat;
  padding: 0 0 0 20px;
  height: 16px;
  cursor: pointer;
}

#filelist tbody td.filename span input {
  padding: 0 2px;
  height: 18px;
}

#filelist thead td {
  cursor: pointer;
}

#filelist thead td.sorted {
  padding-right: 16px;
  text-decoration: underline;
  background: url(images/buttons.png) right -140px no-repeat;
}

#filelist thead td.sorted.reverse {
  background-position: right -120px;
}

#folderlist td span.name {
  background: url(images/folder.png) 0 0 no-repeat;
  height: 18px;
  padding-left: 20px;
  margin-left: 3px;
  cursor: pointer;
}

#folderlist tr.selected td span.name {
  background-image: url(images/folder_open.png);
}

#folderlist tr.selected {
  background-color: inherit;
}

#folderlist tr.selected td span.name {
  font-weight: bold;
}

#folderlist tr.virtual td span.name {
  color: #bbb;
  cursor: default;
}

#folderlist tr.droptarget {
  background-color: #e0e0e0;
}

#folder-collection-audio td span.name,
#folderlist #folder-collection-audio.selected td span.name {
  background: url(images/audio.png) 1px 0 no-repeat;
}
#folder-collection-video td span.name,
#folderlist #folder-collection-video.selected td span.name {
  background: url(images/video.png) 0 0 no-repeat;
}
#folder-collection-image td span.name,
#folderlist #folder-collection-image.selected td span.name {
  background: url(images/image.png) 0 0 no-repeat;
}
#folder-collection-document td span.name,
#folderlist #folder-collection-document.selected td span.name {
  background: url(images/document.png) 0 0 no-repeat;
}

#folder-create-form input {
  vertical-align: middle;
}

#folder-create-form table td.buttons {
  vertical-align: top;
}

.drivers-list {
  max-height: 160px;
  overflow: auto;
}

.drivers-list > div {
  border: 1px solid white;
  border-radius: 3px;
  margin-top: 3px;
  padding: 2px 0;
}

.drivers-list > div.selected {
  background-color: #e8e8e8;
}

.drivers-list div.content {
  display: inline-block;
  vertical-align: middle;
  margin-left: 5px;
}

.drivers-list .name {
  font-weight: bold;
}
/* ... */

